[metadata]
name = qpvdi
version = 0.0.1
author = Quangpv
author_email = quangpv.uit@gmail.com
description = Dependency injection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quangpv/python-dependency-injection
project_urls =
    Bug Tracker = https://github.com/quangpv/python-dependency-injection/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src